[package]
name = "sound-hearing-aid"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.33"
egui = "0.33"
gpui = "0.2.2"
gpui-component = "0.5.1"
screencapturekit = { version = "1", features = ["macos_13_0"] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", features = ["NSResponder", "NSView", "NSWindow"] }
raw-window-handle = "0.6"
winit = "0.30.13"
