[package]
name = "sound-hearing-aid"
version = "0.1.0"
edition = "2021"

[dependencies]
gpui = "0.2.2"
gpui-component = "0.5.1"

[target.'cfg(target_os = "macos")'.dependencies]
screencapturekit = { version = "1", features = ["macos_13_0"] }
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", features = ["NSResponder", "NSView", "NSWindow"] }
raw-window-handle = "0.6"

[package.metadata.bundle]
name = "Hear Ring"
identifier = "com.mixin.hear_ring"
icon = ["assets/HearRing.icns"]
